# meeting-transcriber

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  config.py  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  config_yaml.py  dependencies.py  routes.py  server.py  websocket.py
api/routers/: __init__.py  ab_tests.py  auto_processing.py  meeting_detail.py  meetings_batch.py  recording.py  reindex.py  search_chat.py  settings.py  stt_models.py  system.py  uploads.py  user_settings.py  wiki.py
core/: __init__.py  ab_test_runner.py  ab_test_store.py  audio_quality.py  auto_processing.py  auto_processing_scheduler.py  chipset_detector.py  coreaudio_helper.py  io_utils.py  job_queue.py  llm_backend.py  mlx_client.py  model_manager.py  ollama_client.py  orchestrator.py  perf_stats.py  pipeline.py  preflight.py  quarantine.py  retry_policy.py  runtime_safety.py  single_instance.py  stt_model_downloader.py  stt_model_registry.py  stt_model_status.py  stt_quality_metrics.py  thermal_manager.py  user_settings.py  watcher.py
core/defaults/: __init__.py  perf_baseline.json  prompts.default.json  vocabulary.default.json
core/wiki/: __init__.py  backfill_state.py  chat_integration.py  citation_verifier.py  citations.py  compiler.py  decision_record.py  digest.py  guard.py  lint.py  llm_client.py  models.py  router.py  schema.py  search_index.py  semantic_index.py  semantic_search.py  store.py
docs/: AGGREGATE_DEVICE_SETUP.md  AI_SYSTEM_FINAL_IMPROVEMENT_PROPOSAL_2026-06-20.md  BENCHMARK.md  CODE_QUALITY_MAINTAINABILITY_PERFORMANCE_REVIEW_2026-05-01.md  CONSENSUS_DEEP_CODE_REVIEW_2026-06-20.md  EXPERT_ENGINEERING_REVIEW_2026-05-01.md  FINAL_CRITICAL_REVIEW_PLAN_2026-06-20.md  GEMMA4_12B_ADOPTION.md  MARKETING_COPY.md  MIGRATION.md  OVERSEAS_PROMOTION.md  PERFORMANCE_BACKLOG.md  PROJECT_EVALUATION_2026-04-30.md  PROJECT_EVALUATION_MAIN_2026-04-30.md  STATUS.md  SYSTEM_AUDIT_2026-04-28.md  UI_UX_DEEP_REVIEW_2026-06-20.md  UI_UX_FINAL_EXECUTION_PLAN_2026-06-20.md  UPSTREAM_CONTRIBUTION_NOTES.md  committee-architect-report.md  committee-comparison-report.md  design.md  macwhisper-comparison.md  plan-stt-improvements.md
docs/agentic-ops/: 01-global-codex-skills-setup.md  02-agent-consensus-harness.md  03-workstream-map.md  04-execution-waves.md  05-subagent-review-synthesis.md  06-consensus-harness-implementation.md  07-consensus-integration-wave.md  08-phase-c-api-router-plan.md  09-phase-d-settings-router-plan.md  10-phase-e-search-chat-router-plan.md  11-phase-f-meeting-detail-router-plan.md  12-phase-g-system-recording-upload-router-plan.md  13-codex-skills-evals-ui-qa.md  README.md
docs/code-reviews/: phase2-qa-review-round2.md  phase2-qa-review.md  phase3-batch-api-review.md  phase4-frontend-review-round2.md  phase4-frontend-review.md  phase7-final-review.md
docs/design-decisions/: bulk-actions-handoff.md  bulk-actions-mockup.md  bulk-actions-review-1b-round2.md  bulk-actions-review-1b.md  bulk-actions.md
docs/plans/: 2026-04-08-design-iteration-plan.md  (+19 more)
evals/: quality_golden_cases.json
goals/: continuation.md  memorable-wiki.md
harness/: README.md  __init__.py  __main__.py  a11y.py  artifact.py  assignment.py  behavior.py  board.py  cli.py  consensus.py  db.py  gate.py  review.py  scope.py  snapshot.py  ticket.py
scripts/: __init__.py  backfill_summaries.py  backfill_wiki.py  benchmark_ab_test.py  benchmark_ai_pipeline.py  benchmark_llamacpp_12b.py  benchmark_llm.py  benchmark_llm_12b.py  benchmark_ollama_12b.py  benchmark_ollama_gemma4_12b-it-qat.json  benchmark_ollama_gemma4_e4b-it-qat.json  benchmark_ollama_hf.co_unsloth_gemma-4-12b-it-GGUF_UD-IQ2_M.json  benchmark_ollama_hf.co_unsloth_gemma-4-12b-it-GGUF_UD-Q3_K_XL.json  benchmark_results.json  benchmark_stt.py  benchmark_top2_precise.py  benchmark_whisper_comprehensive.py  benchmark_whisper_korean.py  convert_hf_to_mlx_whisper.py  convert_whisper_mlx.py  create_aggregate_device.swift  eval_wiki_12b.json  eval_wiki_e4b.json  eval_wiki_e4b_new.json  eval_wiki_e4b_old.json  eval_wiki_extraction.py  evaluate_stt_quality.py  install.sh  setup_audio.sh  setup_launchagent.sh  test_mlx_vlm_compat.py  ui_qa_playwright.py  validate_settings.py  whisper_benchmark_results.json  whisper_comprehensive_results.json  whisper_top2_results.json  zoom_audio_activity.swift
search/: __init__.py  chat.py  hybrid_search.py
security/: __init__.py  health_check.py  lifecycle.py  lifecycle_scheduler.py  secure_dir.py
steps/: __init__.py  audio_converter.py  chunker.py  corrector.py  diarization_process_guard.py  diarization_silence.py  diarization_worker.py  diarizer.py  embedder.py  hallucination_filter.py  merger.py  number_normalizer.py  recorder.py  summarizer.py  text_postprocessor.py  transcriber.py  vad_detector.py  wiki_compiler.py  zoom_activity.py  zoom_detector.py
tests/: conftest.py  test_ab_test_api.py  test_ab_test_runner.py  test_ai_pipeline_benchmark.py  test_api_dependencies.py  test_audio_converter.py  test_audio_quality.py  test_auto_processing.py  test_benchmark_stt.py  test_chat.py  test_chipset_detector.py  test_chunker.py  test_config.py  test_convert_whisper_mlx.py  test_coreaudio_helper.py  test_corrector.py  test_diarization_process_guard.py  test_diarization_silence.py  test_diarization_worker.py  test_diarizer.py  test_e2e_edit_playwright.py  test_embedder.py  test_graceful_degradation.py  test_hallucination_filter.py  test_health_check.py  test_hybrid_search.py  test_install.py  test_job_queue.py  test_lifecycle.py  test_lifecycle_scheduler.py  test_llm_backend.py  test_main.py  test_meeting_edit.py  test_menubar.py  test_merger.py  test_mlx_client.py  test_model_manager.py  test_model_path_resolution.py  test_native_window.py  test_number_normalizer.py  (+43 more)
ui/: __init__.py  menubar.py  native_window.py
(+161 files in other folders)
