# 한국어 로컬 AI 회의 전사 시스템 — 프로젝트 설정 (PEP 621)

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "한국어 로컬 AI 회의 전사 시스템 — 100% 오프라인, Apple Silicon 최적화"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "notadev-iamaura" },
]
keywords = ["meeting", "transcription", "korean", "local-ai", "apple-silicon", "whisper", "diarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # 웹 프레임워크
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # macOS UI
    "rumps>=0.4.0",
    "pywebview>=4.0",
    # 파일 감시
    "watchdog>=3.0.0",
    # 설정 관리
    "pyyaml>=6.0",
    # 시스템 모니터링
    "psutil>=5.9.0",
    # 벡터 DB
    "chromadb>=0.4.0,<2.0",
    # AI/ML — STT (Apple Silicon MLX)
    "mlx-whisper>=0.1.0,<1.0",
    # AI/ML — 화자분리
    "pyannote.audio>=3.1.0",
    # AI/ML — 임베딩
    "sentence-transformers>=2.2.0",
    # AI/ML — Ollama 클라이언트
    "ollama>=0.1.0",
    # 오디오 처리
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    # 파일 락 (사용자 설정 동시성 제어)
    "filelock>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # E2E (Playwright) — `pytest -m e2e` 로 명시 실행. chromium 바이너리는
    # `playwright install chromium` 명령으로 별도 설치 필요.
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/notadev-iamaura/meeting-transcriber"
Repository = "https://github.com/notadev-iamaura/meeting-transcriber"
Issues = "https://github.com/notadev-iamaura/meeting-transcriber/issues"

[project.scripts]
meeting-transcriber = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["core*", "steps*", "search*", "api*", "ui*", "security*"]

[tool.setuptools.package-data]
"core.defaults" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# e2e 마커가 달린 Playwright 테스트는 기본 실행에서 제외한다.
# pytest-playwright 가 pytest-asyncio 의 auto 모드와 충돌하여
# 함께 실행하면 async 테스트가 await 되지 않는 문제가 있기 때문이다.
# 브라우저 E2E 는 별도로 실행: `pytest -m e2e tests/test_e2e_edit_playwright.py`
addopts = "-m 'not e2e'"
markers = [
    "e2e: Playwright 기반 브라우저 E2E 테스트 (기본 실행에서 제외, `-m e2e` 로 명시 실행)",
]

# === 코드 품질 도구 ===

[tool.ruff]
target-version = "py311"
line-length = 99
src = [".", "core", "steps", "search", "api", "ui", "security"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle 오류
    "F",    # pyflakes
    "W",    # pycodestyle 경고
    "I",    # isort (임포트 정렬)
    "UP",   # pyupgrade (Python 3.11+ 패턴)
    "B",    # flake8-bugbear (버그 패턴)
    "SIM",  # flake8-simplify (코드 간소화)
]
ignore = [
    "E501",   # 줄 길이는 formatter에 위임
    "UP007",  # Union[X, Y] → X | Y 변환 비활성 (기존 코드 호환)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B011"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "steps", "search", "api", "ui", "security"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
