# 한국어 로컬 AI 회의 전사 시스템 — 프로젝트 설정 (PEP 621)

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "한국어 로컬 AI 회의 전사 시스템 — 100% 오프라인, Apple Silicon 최적화"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "notadev-iamaura" },
]
keywords = ["meeting", "transcription", "korean", "local-ai", "apple-silicon", "whisper", "diarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # 웹 프레임워크
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    # macOS UI
    "rumps>=0.4.0",
    "pywebview>=4.0",
    # 파일 감시
    "watchdog>=3.0.0",
    # 설정 관리
    "pyyaml>=6.0",
    # 시스템 모니터링
    "psutil>=5.9.0",
    # 벡터 DB
    "chromadb>=0.4.0,<2.0",
    # AI/ML — STT (Apple Silicon MLX)
    "mlx-whisper>=0.1.0,<1.0",
    # AI/ML — LLM (Apple Silicon MLX, in-process 기본 백엔드)
    #   - mlx-lm   : EXAONE 3.5 등 일반 LLM 추론
    #   - mlx-vlm  : Gemma 4 등 멀티모달(Vision-Language) 모델 추론
    # 사용자가 config.yaml 에서 선택한 모델에 따라 core/mlx_client.py 가 자동 분기한다.
    "mlx-lm>=0.19.0,<1.0",
    "mlx-vlm>=0.1.0,<1.0",
    # AI/ML — VAD (무음 구간 감지 → 환각 방지)
    # 무음 구간을 STT 에 보내지 않아 환각을 원천 차단. torch 는 pyannote 의존성으로 이미 설치됨.
    "silero-vad>=5.1",
    # AI/ML — 화자분리
    "pyannote.audio>=3.1.0",
    # AI/ML — 임베딩
    "sentence-transformers>=2.2.0",
    # AI/ML — Ollama 클라이언트
    "ollama>=0.1.0",
    # 오디오 처리
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    # 파일 락 (사용자 설정 동시성 제어)
    "filelock>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # E2E (Playwright) — `pytest -m e2e` 로 명시 실행. chromium 바이너리는
    # `playwright install chromium` 명령으로 별도 설치 필요.
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "axe-playwright-python>=0.1.4",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/notadev-iamaura/meeting-transcriber"
Repository = "https://github.com/notadev-iamaura/meeting-transcriber"
Issues = "https://github.com/notadev-iamaura/meeting-transcriber/issues"

[project.scripts]
meeting-transcriber = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["core*", "steps*", "search*", "api*", "ui*", "security*", "harness*"]

[tool.setuptools.package-data]
"core.defaults" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# e2e/ui/native 마커가 달린 테스트는 기본 실행에서 제외한다.
# pytest-playwright 가 pytest-asyncio 의 auto 모드와 충돌하여
# 함께 실행하면 async 테스트가 깨지는 문제가 있기 때문이다 (event loop 누수).
# 브라우저/native 테스트는 별도로 실행:
#   `pytest -m e2e tests/test_e2e_edit_playwright.py`
#   `pytest -m ui tests/ui/`
#   `pytest -m native tests/`
addopts = "-m 'not e2e and not ui and not native'"
markers = [
    "unit: native 런타임 없이 실행되는 빠른 단위 테스트",
    "api: FastAPI route/service 계층 테스트",
    "integration: 여러 컴포넌트를 함께 검증하는 통합 테스트",
    "native: MLX/Metal/CoreAudio 등 native 런타임을 실제로 사용하는 테스트 (기본 실행 제외)",
    "e2e: Playwright 기반 브라우저 E2E 테스트 (기본 실행에서 제외, `-m e2e` 로 명시 실행)",
    "harness: 하네스 자체 단위 테스트",
    "ui: UI/UX overhaul 테스트 (Wave 1/2/3 산출물)",
]

# === 코드 품질 도구 ===

[tool.ruff]
target-version = "py311"
line-length = 99
src = [".", "core", "steps", "search", "api", "ui", "security", "harness"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle 오류
    "F",    # pyflakes
    "W",    # pycodestyle 경고
    "I",    # isort (임포트 정렬)
    "UP",   # pyupgrade (Python 3.11+ 패턴)
    "B",    # flake8-bugbear (버그 패턴)
    "SIM",  # flake8-simplify (코드 간소화)
]
ignore = [
    "E501",    # 줄 길이는 formatter에 위임
    "UP007",   # Union[X, Y] → X | Y 변환 비활성 (기존 코드 호환)
    # 아래 SIM 계열은 스타일 권장일 뿐이라 기존 코드베이스와의 일관성을 위해 비활성.
    # 필요하면 개별 PR 에서 정리하고 이 ignore 를 제거.
    "SIM102",  # collapsible-if (중첩 if 한 줄 결합)
    "SIM105",  # suppressible-exception (try/except pass → contextlib.suppress)
    "SIM108",  # if-else-block-instead-of-if-exp (삼항 연산자 권장)
    "SIM115",  # open-file-with-context-handler (명시적 close 허용)
    "SIM117",  # multiple-with-statements (중첩 with 한 줄 결합)
]

[tool.ruff.lint.per-file-ignores]
# 테스트는 monkeypatching / 조건부 import / sys.path 주입 패턴이 일반적이라 E402 허용.
"tests/*" = ["S", "B011", "E402"]
# scripts/ 는 실행형 유틸로 `sys.path.insert` 가 import 보다 선행해야 하므로 E402 허용.
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "steps", "search", "api", "ui", "security", "harness"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
